# sweetsixteen

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
src/: UILibrary.py  build_demo_db.py  io_mock.py  main.py
src/UI/: UILibrary.py  ui.py
src/repositories/: reference_repository.py
src/services/: bibtex_service.py  parser.py  reference_service.py
src/tests/: bibtex_service_test.py  input.robot  reference_repository_test.py  resource.robot  services_test.py
src/utils/: database_connection.py  initialize_database.py  initialize_test_database.py  schema.sql  test.py
