[tool.poetry]
name = "sweetsixteen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.6"
pytest = "^7.2.0"
invoke = "^1.7.3"
robotframework = "^6.0.1"
bibtexparser = "^1.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
robotframework = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
